# twkbC

./: LICENSE  README.md  configure.ac
src/: Makefile.am  encode_esri_json.c  encode_geojson.c  mem_handling.c  read_file.c  text_buffer.c  twkb.c  twkb.h  twkb_buffer.c  twkb_decode.c  twkb_decode_indexed.c
testdata/: README.md  kommuner.twkb  kommuner_navn.json
tests/: Makefile.am  minunit.h  minunit_test.c
